--- a/templates/_formhelpers.html
+++ b/templates/_formhelpers.html
@@ -42,7 +42,7 @@
 {% endmacro %}
 
 {% macro render_field_horizontal(field, addon, prepend, tooltip, label_text) %}
-        <div class="form-group vcenter{% if field.errors %} has-error{% endif %}">
+        <div class="form-group {% if field.errors %} has-error{% endif %}">
             {{ render_label_horizontal(field, tooltip, label_text) }}
                 {% if addon %}
                 <div class="{% if prepend %}input-group{%else%}input-group{%endif%}">
@@ -91,7 +91,7 @@
 {% endmacro %}
 
 {% macro render_field_horizontal_checkbox(field, addon, prepend, tooltip, label_text) %}
-        <div class="form-group vcenter{% if field.errors %} has-error{% endif %}">
+        <div class="form-group {% if field.errors %} has-error{% endif %}">
             {{ render_label_horizontal_checkbox(field, tooltip, label_text) }}
                 {% if addon %}
                 <div class="{% if prepend %}input-group{%else%}input-group{%endif%}">
