--- a/templates/admin/analytics.html
+++ b/templates/admin/analytics.html
@@ -2,7 +2,7 @@
 {% set active_page = "analytics" %}
 {% from "admin/_helpers.html" import render_local_nav %}
 {% block content %}
-{{ render_local_nav(current_user, "tasks", app.short_name) }}
+{{ render_local_nav(current_user, "tasks") }}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
@@ -30,11 +30,11 @@
   fs.parentNode.insertBefore(js,fs);js.onload=function(){g.load('analytics');};
 }(window,document,'script'));
 </script>
-<script src="/public/javascript/Chart.min.js"></script>
-<script src="/public/javascript/moment.min.js"></script>
-<script src="/public/javascript/embed-api/view-selector2.js"></script>
-<script src="/public/javascript/embed-api/date-range-selector.js"></script>
-<script src="/public/javascript/embed-api/active-users.js"></script>
+<script src="url_for('static', filename='js/vendor/Chart.js-master/Chart.min.js"></script>
+<script src="js/vendor/moment.min.js"></script>
+<script src="js/vendor/embed-api/view-selector2.js"></script>
+<script src="js/vendor/embed-api/date-range-selector.js"></script>
+<script src="js/vendor/embed-api/active-users.js"></script>
 <script>
 
 // == NOTE ==
