--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -15,7 +15,7 @@
           {% else %}
           <div class="row vcenter-sm">
             <div class="col-md-8 col-xs-12 xs-center">
-              <h1>{{ _('Community') }} <h4 class="padding-left-xs">{{total}} {{ _('registered users') }}</h4>
+              <h1>{{ _('Community') }} <h4>{{total}} {{ _('registered users') }}</h4>
               <small>Those who have completed tasks are shown below</small>
             </div>
             <div class="col-md-4 col-xs-12 text-center">
