--- a/templates/admin/bl_search.html
+++ b/templates/admin/bl_search.html
@@ -27,16 +27,16 @@
                                 <h4>Queries should be formed according to a variation of the CCL protocol, for example:</h4>
 
                                     <p><strong>Title:</strong>
-                                    (1,4)=”Hard Times”</p> 
+                                    (1,4)=&quot;Hard Times&quot;</p> 
                                     
                                     <p><strong>Year of Publication:</strong>
-                                    (1,31)=”1984”</p><br>
+                                    (1,31)=&quot;1984&quot;</p><br>
                                     
                                     
                                     <h4>Boolean operators can also be used, such as:</h4>
                                     
                                     <p><strong>Author and ISBN:</strong>
-                                     (1,1018)=“Pan Books”and(1,7)=” 9780671746063”</p><br>
+                                     (1,1018)=&quot;Pan Books&quot;and(1,7)=&quot;9780671746063&quot;</p><br>
                                     
                                     
                                     <p>This syntax has to be exact, with any errors producing appropriate error messages, or possibly just a
@@ -46,7 +46,7 @@
                                     a successful search via this page. Results can be returned in XML, JSON and HTML format, with the latter
                                     being intended primarily for uses within projects on the LibCrowds platform.</p>
                                     
-                                    <p>The <a href="https://www.oclc.org/support/services/z3950/documentation/searchtips.en.html">OCLC documentation</a>
+                                    <p>The <a href="https://www.oclc.org/support/services/z3950/documentation/searchtips.en.html" target="_blank">OCLC documentation</a>
                                     contains more information and the codes for each field.</p>
                                     
                                     <p>Note that a result count can also be returned via:<br>
