--- a/templates/account/email/forgot_password.html
+++ b/templates/account/email/forgot_password.html
@@ -1,10 +1,8 @@
 <p>Hello {{ user.fullname }},</p>
 
-<p>We received a request to recover your password for {{ config.BRAND }}.</p>
+<p>We received a request to reset your password at {{ config.BRAND }}.</p>
 
-<p>If you did not request this, please ignore this email.
-</p>
-<p>To recover your password, please visit the URL below:
+<p>If you did not make this request please ignore this email. To reset your password, please visit the URL below:
 </p>
 <p><a href="{{ recovery_url }}">{{ recovery_url }}</a></p>
 
