--- a/templates/account/email/forgot_password_openid.html
+++ b/templates/account/email/forgot_password_openid.html
@@ -1,11 +1,11 @@
 <p>Hello {{ user.fullname }},
 </p>
-<p>We received a request to recover your password for {{ config.BRAND }}.
+<p>We received a request to recover your password at {{ config.BRAND }}.
 </p>
-<p>If you did not request this, please ignore this email.
+<p>If you did not make this request please ignore this email.
 </p>
 <p>Our records show that you use your {{ account_name }} account to sign in. Please use
-the same account to sign-in again.  If you forgot the password to your {{ account_name }}
+the same account to sign-in again. If you forgot the password to your {{ account_name }}
 account, please contact {{ account_name }}.
 </p>
 <p>Regards,</p>
