--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -4,38 +4,58 @@
 {% import "privacy/locked.html" as privacy %}
 
 {% block content %}
+<span class="set-main-bg" data-bg="pattern-white-wall"></span>
 <!-- Leaflet maps -->
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.css" />
  <!--[if lte IE 8]>
      <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.ie.css" />
  <![endif]-->
 
-<link href="{{url_for('static', filename='css/stats/stats.css')}}" rel="stylesheet" type="text/css">
-<script src="{{url_for('static', filename='js/stats/flotr2.min.js')}}" type="text/javascript"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.4/leaflet.js"></script>
 <link href="{{url_for('static', filename='css/stats/MarkerCluster.css')}}" rel="stylesheet" type="text/css">
 <link href="{{url_for('static', filename='css/stats/MarkerCluster.Default.css')}}" rel="stylesheet" type="text/css">
 <link href="{{url_for('static', filename='css/stats/stats.css')}}" rel="stylesheet" type="text/css">
 <script src="http://cdn.leafletjs.com/leaflet-0.4/leaflet.js"></script>
-<script src="{{url_for('static', filename='js/stats/flotr2.min.js')}}" type="text/javascript"></script>
 <script src="{{url_for('static', filename='js/stats/leaflet.markercluster.js')}}" type="text/javascript"></script>
-
-<div class="container-padded remove-padding-bottom">
-    <section class="white">
-        <div class="container container-padded">
-<div class="row">
+<div class="container container-padded">
     {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
-    {{ privacy.render_lock_page() }}
-    {% else %}
-    <div class="col-sm-4 white-rounded">
-        <canvas id="users" class="col-md-3" style="max-height:400px;"></canvas>
-    </div>
-</div>
+                {{ privacy.render_lock_page() }}
+            {% else %}
+            <div class="row container-padded">
+                <div class="col-xs-12">
+                    <div class="white-rounded chart">
+                        <h4 class="text-center padding-bottom-sm">Tasks Completed per Day</h4>
+                        <div id="task-date-chart">
+                            <canvas id="task-date" style="max-height:300px;"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
             
+            <div class="row">
+                <div class="col-sm-4 col-xs-12">
+                    <div class="white-rounded chart">
+                        <h4 class="text-center padding-bottom-sm">Proportion of Authenticated Users</h4>
+                        <div id="user-chart">
+                            <canvas id="users" width="500" height="300"></canvas>
+                            <div id="users-legend" class="padding-top-sm">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="row container-padded">
+                <div class="col-xs-12">
+                    <div class="white-rounded text-center chart">
+                        <h4 class=" padding-bottom-sm">Locations of Anonymous Users</h4>
+                        <div id="map" style="height:300px;"></div>
+                    </div>
+                </div>
+            </div>  
+            {% endif %}
 </div>
-</section>
-    </div>
-        <script src="{{url_for('static', filename='js/vendor/Chart.js-master/Chart.js')}}"></script>
+<script src="{{url_for('static', filename='js/vendor/Chart.js-master/Chart.js')}}"></script>
 <script>
 Chart.defaults.global = {
     // Boolean - Whether to animate the chart
@@ -154,41 +174,127 @@ Chart.defaults.global = {
     // Function - Will fire on animation completion.
     onAnimationComplete: function(){},
     
+    //Boolean - Whether we should show a stroke on each segment
+    segmentShowStroke : true,
+
+    //String - The colour of each segment stroke
+    segmentStrokeColor : "#fff",
+    
+    tooltipTemplate: "<%%><%=label%><%%>",
+
+    //Number - The width of each segment stroke
+    segmentStrokeWidth : 2,
+
+    //Number - The percentage of the chart that we cut out of the middle
+    percentageInnerCutout : 50, // This is 0 for Pie charts
+
+    //Boolean - Whether we animate the rotation of the Doughnut
+    animateRotate : true,
+
+    //Boolean - Whether we animate scaling the Doughnut from the centre
+    animateScale : false,
+
     //String - A legend template
-    legendTemplate : '<ul>'
-                  +'<% for (var i=0; i<datasets.length; i++) { %>'
-                    +'<li>'
-                    +'<span style=\"background-color:<%=datasets[i].lineColor%>\"></span>'
-                    +'<% if (datasets[i].label) { %><%= datasets[i].label %><% } %>'
-                  +'</li>'
-                +'<% } %>'
-              +'</ul>'
+    legendTemplate : '<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<segments.length; i++)\u007D%><li><span style=\"background-color:<%=segments[i].fillColor%>\"></span><%if(segments[i].label)\u007D%><%=segments[i].label%\u007B<%}%></li><%\u007B%></ul>'
 }
+
 </script>
     <script>
-    (function(){
+    $(function(){
         
         //User proportions chart
         var userData = {{users|safe}};
-        console.log(userData);
-        console.log(userData['values'][0]['label']);
         var data = [
         {
             value: userData['values'][0]['value'][1],
-            color:"#637b85",
-            label: userData['values'][0]['label']
+            color: "rgba(151,187,205,1)",
+            highlight: "rgba(151,187,205,0.8)",
+            label: userData['values'][0]['label'] + ": " + userData['values'][0]['value'][1]
         },
         {
             value : userData['values'][1]['value'][1],
-            color : "#2c9c69",
-            label: userData['values'][1]['label']
+            color:"#BA0000",
+            highlight: "#D00000",
+            label: userData['values'][1]['label'] + ": " + userData['values'][1]['value'][1]
         }
         ];
-        var canvas = $("#users");
+        var canvas = document.getElementById("users");
         var ctx = canvas.getContext("2d");
-        new Chart(ctx).Doughnut(data);
-        var legend = lineChart.generateLegend();
-        $('#users').append(legend);
+        var myDoughnut = new Chart(ctx).Doughnut(data);
+        var legendHolder = document.getElementById('users-legend')
+      // Include a html legend template after the module doughnut itself
+      var helpers = Chart.helpers;
+      helpers.each(legendHolder.firstChild.childNodes, function(legendNode, index){
+          helpers.addEvent(legendNode, 'mouseover', function(){
+              var activeSegment = myDoughnut.segments[index];
+              activeSegment.save();
+              activeSegment.fillColor = activeSegment.highlightColor;
+              myDoughnut.showTooltip([activeSegment]);
+              activeSegment.restore();
+          });
+      });
+      helpers.addEvent(legendHolder.firstChild, 'mouseout', function(){
+          myDoughnut.draw();
+      });
+      canvas.parentNode.parentNode.appendChild(legendHolder.firstChild);
+          
+
+          myDoughnut.generateLegend();
+          document.getElementById('users-legend').innerHTML = myDoughnut.generateLegend();
+    });
+    (function(){
+        var map = L.map('map');
+        map.fitWorld();
+        map.setZoom(1);
+        var url = 'http://{s}.tile.osm.org/{z}/{x}/{y}.png'
+        L.tileLayer(url, 
+            {
+            attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> &mdash; <a href="http://www.maxmind.com">MaxMind</a>',
+            scrollWheelZoom: false,
+            maxZoom: 18,
+            minZoom:1
+            }).addTo(map);
+    
+        var i = 0;
+        var locations = {{locs|safe}};
+        var l = locations.length;
+        var markers = new L.MarkerClusterGroup();
+        for (i;i<l;i++) {
+            if (locations[i].loc != null) {
+                var lat = parseFloat(locations[i].loc.latitude);
+                var lng = parseFloat(locations[i].loc.longitude);
+                markers.addLayer(L.marker([lat,lng]));
+            }
+        }
+        map.addLayer(markers);
     })();
+    
+$(function(){
+    $(window).on("resize", function () {
+            var taskDateData = {{task_run_dates|safe}};
+            var data = {
+                labels: taskDateData['days'],
+                datasets: [
+                    {
+                        label: "Tasks Completed per Day",
+                        fillColor: "rgba(151,187,205,0.2)",
+                        strokeColor: "rgba(151,187,205,1)",
+                        pointColor: "rgba(151,187,205,1)",
+                        pointStrokeColor: "#fff",
+                        pointHighlightFill: "#fff",
+                        pointHighlightStroke: "rgba(151,187,205,1)",
+                        data: taskDateData['tasks']
+                    }
+                ]
+            };
+        $("#task-date").attr("width", $('#task-date-chart').width());
+        $("#task-date").attr("height", 300);
+        var ctx = $("#task-date")[0].getContext("2d");
+        var opts = {tooltipTemplate: "<%%><%=label%>: <%=value%> tasks<%%>"};
+        var taskDateChart = new Chart(ctx).Line(data, opts);
+        taskDateChart.draw();
+        Chart.defaults.global.animation = false;
+    }).resize();
+});
 </script>
 {% endblock %}
