--- a/templates/applications/stats.html
+++ b/templates/applications/stats.html
@@ -285,7 +285,7 @@
                                         <th>#</th>
                                         <th>{{_('Country')}}</th>
                                         <th>{{_('City')}}</th>
-                                        <th>{{_('Tasks')}}</th>
+                                        <th>{{_('Answers')}}</th>
                                     </tr>
                                 </thead>
                             {% for u in userStats.anonymous.top5 %}
@@ -379,7 +379,7 @@
                                     <tr>
                                         <th>#</th>
                                         <th>{{_('User')}}</th>
-                                        <th>{{_('Tasks')}}</th>
+                                        <th>{{_('Answers')}}</th>
                                     </tr>
                                 </thead>
                             {% for u in userStats.authenticated.top5 %}
