--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -20,7 +20,7 @@
                             <tr>
                                 <th>{{ _('Rank') }}</th>
                                 <th>{{ _('Name') }}</th>
-                                <th>{{ _('Tasks Completed') }}</th>
+                                <th>{{ _('Answers') }}</th>
                             </tr>
                         </thead>
                         <tbody>
