--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2393,7 +2393,7 @@ record {
 }
 
 
-.doughnut-legend li span {
+.legend li span {
   display: block;
   width: 14px;
   height: 14px;
@@ -2403,7 +2403,7 @@ record {
   margin-right: 8px;
 }
 
-.doughnut-legend {
+.legend {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -2412,10 +2412,10 @@ record {
 
 }
 
-.doughnut-legend li {
+.legend li {
   margin-bottom : 4px;
 }
 
-.doughnut-legend li:first-letter {
+.legend li:first-letter {
   text-transform: capitalize;
 }
