--- a/templates/account/_helpers.html
+++ b/templates/account/_helpers.html
@@ -62,11 +62,11 @@
             <div class="col-xs-6 text-center">
                 {% if user.score %}
                     <i class="fa fa-tasks fa-4x"></i>
-                    <p>{{ _('Tasks') }}</p>
+                    <p>{{ _('Answers') }}</p>
                     <p class="score">{{user.score}}</p>
                 {% else %}
                     <i class="fa fa-tasks fa-4x"></i>
-                    <p>{{ _('Tasks') }}</p>
+                    <p>{{ _('Answers') }}</p>
                     <p class="score">0</p>  
                 {% endif %}
             </div>
