--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -16,7 +16,7 @@
           <div class="row vcenter-sm">
             <div class="col-md-8 col-xs-12 xs-center">
               <h1>{{ _('Community') }} <h4>{{total}} {{ _('registered users') }}</h4>
-              <small>Those who have completed tasks are shown below</small>
+              <small>Active volunteers are shown below</small>
             </div>
             <div class="col-md-4 col-xs-12 text-center">
               <a class="pull-right-sm btn btn-danger" href="{{url_for('leaderboard.index')}}">{{ _('View Leaderboard') }}</a></h1>
@@ -30,7 +30,7 @@
                 <a href="{{url_for('account.profile', name=account.name)}}" class="polaroid polaroid-sm" rel="popover" title="{{account.name}}" data-polaroid-title="{{account.name}}" data-html="true" data-content="
                 <ul>
                   <li><strong><i class='glyphicon glyphicon-calendar'></i> Joined</strong>: <span class='format-date' data-date='{{account['created']}}'></span></li>
-              <li><strong><i class='glyphicon glyphicon-tasks'></i>Tasks Completed</strong>: {{ account.task_runs }}</li>
+              <li><strong><i class='glyphicon glyphicon-tasks'></i> Answers</strong>: {{ account.task_runs }}</li>
           </ul>
           ">
                   {{ helper.render_user_thumbnail(account, upload_method) }}
