--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,8 @@
     <script type="text/javascript" src="{{url_for('static', filename='vendor/modernizr.min.js')}}"></script>
      <script type="text/javascript" src="{{url_for('static', filename='vendor/jquery.cookie.js')}}"></script>
     <script src="{{url_for('static', filename='js/vkbeautify.js')}}" type="text/javascript"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
+    
     <script>{% include 'scripts.js' %}</script>
     
     <!-- Google Analytics or similar solutions -->
