--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,7 @@
     <!-- Le styles -->
     <link href="{{url_for('static', filename='vendor/bootstrap.min.css')}}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css">
-    <link href="{{url_for('static', filename='css/fonts/stylesheet.css')}}" rel="stylesheet">
-    <link href="{{url_for('static', filename='css/styles.css')}}" rel="stylesheet">
+    <link href="{{url_for('static', filename='css/styles.css?v=1.1')}}" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
 
@@ -35,8 +34,7 @@
      <script type="text/javascript" src="{{url_for('static', filename='vendor/jquery.cookie.js')}}"></script>
     <script src="{{url_for('static', filename='js/vkbeautify.js')}}" type="text/javascript"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
-    
-    <script>{% include 'scripts.js' %}</script>
+    <script src="{{url_for('static', filename='js/scripts.js')}}" type="text/javascript"></script>
     
     <!-- Google Analytics or similar solutions -->
     {% include '_ga.html' ignore missing %}
