--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -116,4 +116,5 @@
             {% endif %}
 </div>
 <script src="{{url_for('static', filename='js/vendor/Chart.js-master/Chart.js')}}"></script>
+<script>{% include {{url_for('static', filename='js/charts.js')}} %}</script>
 {% endblock %}
