--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -56,19 +56,19 @@
       </div>
         <ul class="users">
         {% for user in top_users %}
-<li>
-<a href="{{url_for('account.profile', name=user.name)}}" data-content="
-   <strong>{{_('Joined')}}:</strong> <span class="format-date" data-date="{{user.created}}"
-   <br/>
-   <strong>{{_('Tasks')}}:</strong> {{user.task_runs}}
-   " rel="popover" data-original-title="<strong>{{user.fullname}}</strong>">
-   <div class="shadow shadow-circle">
-{{ account_helper.render_user_thumbnail(user, upload_method, style="height:90px; width:90px;", class="img-circle") }}
-   </div>
-</a>
-<span class="label label-success">{{user.task_runs}}</span> <small>{{_('Tasks')}}</small>
-</li>
-{% endfor %}
+          <li>
+          <a href="{{url_for('account.profile', name=user.name)}}" data-content="
+             <strong>{{_('Joined')}}:</strong> {{user.created[0:10]}} 
+             <br/>
+             <strong>{{_('Tasks')}}:</strong> {{user.task_runs}}
+             " rel="popover" data-original-title="<strong>{{user.fullname}}</strong>">
+             <div class="shadow shadow-circle">
+          {{ account_helper.render_user_thumbnail(user, upload_method, style="height:90px; width:90px;", class="img-circle") }}
+             </div>
+          </a>
+          <span class="label label-success">{{user.task_runs}}</span> <small>{{_('Tasks')}}</small>
+          </li>
+          {% endfor %}
 </ul>
 </div>
     <div class="col-sm-12 text-center padding-top-xs">
