--- a/templates/admin/_helpers.html
+++ b/templates/admin/_helpers.html
@@ -42,8 +42,8 @@
             {% if active_app %}
                 <li class="divider"></li>
                 <li class="nav-link"><a href="{{url_for('app.tasks', short_name=active_app)}}">{{_('Dashboard')}}</a></li>
-                <li class="nav-link"><a href="{{url_for('app.task_presenter_editor', short_name=active_app)}}">{{_('Code Editor')}}</a></li>
-                <li class="nav-link"><a href="{{url_for('app.settings', short_name=active_app)}}"> {{_('Project Details')}}</a></li>
+                <li class="nav-link"><a href="{{url_for('app.task_presenter_editor', short_name=active_app)}}">{{_('Edit Code')}}</a></li>
+                <li class="nav-link"><a href="{{url_for('app.settings', short_name=active_app)}}"> {{_('Edit Details')}}</a></li>
                 <li class="nav-link"><a href="{{url_for('app.auditlog', short_name=active_app)}}">{{_('Audit Logs')}}</a></li>
             {% endif %}
         </ul>
