--- a/templates/applications/task_import_options.html
+++ b/templates/applications/task_import_options.html
@@ -6,6 +6,7 @@
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
 {{ render_local_nav(current_user, "import", app.short_name) }}
+<span class="set-main-bg" data-bg="pattern-white-wall"></span>
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
